fixed spacing of words

--- a/other/main.css
+++ b/other/main.css
@@ -141,7 +141,8 @@ body {
   font-family: 'MyFont', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   text-align: center;
   background: #ffffff;
-  border-radius: 9px;
+  border-radius: 8px;
+  border: 1px solid black;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: relative;
 }
@@ -157,7 +158,6 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: relative;
   border: 1px solid black;
-  min-height: 275px;
 }
 
 .download-button:disabled {
